# research_collection

./: CMakeLists.txt  main.py  run.sh  tesseract.py  voronoi.py
include/: p3vector.hpp  p4vector.hpp  voronoi.h
include/voronoi/: voronoi.hpp
scripts/py/: matrix.py
src/: fourd.cpp  voronoi.cpp  voronoi2.cpp
